<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/vegetable"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="8dp"
        android:onClick="addVeg"
        android:text="@string/vegetable"
        app:layout_constraintBottom_toTopOf="@+id/fruit"
        app:layout_constraintEnd_toStartOf="@+id/vegTotalDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fruit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="94dp"
        android:onClick="addFruit"
        android:text="@string/fruit"
        app:layout_constraintBottom_toTopOf="@+id/sumTotalDisplay"
        app:layout_constraintEnd_toStartOf="@+id/fruitTotalDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetable" />

    <TextView
        android:id="@+id/fruitTotalDisplay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="94dp"
        android:gravity="center"
        android:text="@string/display_f_total"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/sumTotalDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fruit"
        app:layout_constraintTop_toBottomOf="@+id/vegTotalDisplay" />

    <TextView
        android:id="@+id/vegTotalDisplay"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/display_v_total"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/fruitTotalDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/vegetable"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sumTotalDisplay"
        android:layout_width="194dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:text="@string/display_sum_total"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <Button
        android:id="@+id/undo"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:onClick="undo"
        android:text="@string/undo_button"
        app:layout_constraintBottom_toTopOf="@+id/vegTotalDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/dateToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/date_today"
        app:layout_constraintBaseline_toBaselineOf="@+id/undo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/streakDisplay"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/streak"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sumTotalDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

</android.support.constraint.ConstraintLayout>